--- a/NubeBooks/Views/Admin/ReportesPresupuestos.cshtml
+++ b/NubeBooks/Views/Admin/ReportesPresupuestos.cshtml
@@ -78,14 +78,14 @@
                     <div class="col-md-4">
                         <label class="col-md-6 text-center">Avance de Presupuesto </label>
                         <div class="col-md-6 text-center">
-                            <a class="btn btn-sm btn-success reporte" data-idreporte="1">Generar Reporte</a>
+                            <a class="btn btn-sm btn-info reporte" data-idreporte="1">Generar Reporte</a>
                         </div>
                     </div>
                     <div class="col-md-8">
                         <label class="col-md-3 text-center">Partida de Presupuesto</label>
                         @Html.TextBox("IdCategoria", "", new { @class = "col-xs-6 col-sm-6 col-md-6 no-padder" })
                         <div class="col-md-3 text-center">
-                            <a class="btn btn-sm btn-success reporte" data-idreporte="9">Generar Reporte</a>
+                            <a class="btn btn-sm btn-info reporte" data-idreporte="9">Generar Reporte</a>
                         </div>
                     </div>
                 </div>
