--- a/NubeBooks/Views/Admin/ReportesInventarios.cshtml
+++ b/NubeBooks/Views/Admin/ReportesInventarios.cshtml
@@ -38,7 +38,7 @@
                     return "/Admin/GenerarRep_Inventarios/?FechaInicio=" + encodeURIComponent(FechaInicio) + "&" + "FechaFin=" + encodeURIComponent(FechaFin);
                     break;
                 case 3:
-                    return "/Admin/GenerarRep_Items_Por_Vencimiento/?FechaInicio=" + encodeURIComponent(FechaInicio) + "&" + "FechaFin=" + encodeURIComponent(FechaFin) + "&" + "rFechaFin=" + encodeURIComponent(rFechaFin);
+                    return "/Admin/GenerarRep_Items_Por_Vencimiento/?rFechaFin=" + encodeURIComponent(rFechaFin);
                     break;
                 case 4:
                     //return "/Admin/GenerarRep_Stock_De_Items/?FechaInicio=" + encodeURIComponent(FechaInicio) + "&" + "FechaFin=" + encodeURIComponent(FechaFin);
@@ -98,7 +98,7 @@
             <div class="form-group">
                 <div class="row">
                     <div class="col-md-6">
-                        <label class="col-md-4 text-right" style="transform:translateY(30%)">Fecha Limite: </label>
+                        <label class="col-md-4 text-right" style="transform:translateY(30%)">Fecha de corte: </label>
                         <div class="input-group date col-md-8">
                             @Html.TextBox("rFechaFin", DateTime.Now, "{0:dd/MM/yyyy}", new { @class = "form-control", @placeholder = "Ingrese la fecha de fin", @type = "text", @readonly = "readonly" })
                             @*@Html.TextBox("rFechaFin", DateTime.Now, "{0:dd/MM/yyyy}", new { @class = "datepicker-input form-control", @placeholder = "Ingrese la fecha de fin", @type = "text", @data_provide = "datepicker", @readonly = "readonly" })*@
