--- a/NubeBooks/Views/Admin/ComprobantesAnulados.cshtml
+++ b/NubeBooks/Views/Admin/ComprobantesAnulados.cshtml
@@ -106,7 +106,7 @@
                         <th style="width:10%">Documento</th>
                         <th style="width:10%">Número</th>
                         <th style="width:35%">Cliente</th>
-                        <th class="text-center" style="width:10%">Monto</th>
+                        <th class="text-center" style="width:10%">Monto Total</th>
                         @*<th class="text-center" style="width:5%">Estado</th>*@
                         <th style="width:8%"></th>
                     </tr>
