--- a/NubeBooks/Views/Admin/InventariosEgreso.cshtml
+++ b/NubeBooks/Views/Admin/InventariosEgreso.cshtml
@@ -103,7 +103,7 @@
                                 <td>@item.nForma</td>
                                 <td>@item.nItem</td>
                                 <td>@item.NroDocumento</td>
-                                <td>@item.Cantidad</td>
+                                <td>- @item.Cantidad</td>
                                 <td>@item.UnidadMedida</td>
                                 <td class="text-center">@item.SerieLote</td>
                                 <td class="text-center">@item.StockLote</td>
