--- a/NubeBooks/Views/Admin/ReportesInventarios.cshtml
+++ b/NubeBooks/Views/Admin/ReportesInventarios.cshtml
@@ -111,7 +111,7 @@
             <div class="form-group">
                 <div class="row">
                     <div class="col-md-6">
-                        <label class="col-md-8 text-center">Items Por Fecha de Vencimiento</label>
+                        <label class="col-md-8 text-center">Items con Fecha de Vencimiento</label>
                         <div class="col-md-4 text-center">
                             <a class="btn btn-sm btn-primary reporte" data-idreporte="3">Generar Reporte</a>
                         </div>
