--- a/NubeBooks/Views/Admin/ReportesPresupuestos.cshtml
+++ b/NubeBooks/Views/Admin/ReportesPresupuestos.cshtml
@@ -49,7 +49,7 @@
     </script>
 }
 <div class="bg-light lter b-b wrapper-md">
-    <h1 class="m-n font-thin h3">Reporte de Presupuestos</h1>
+    <h1 class="m-n font-thin h3">Reportes de Presupuesto</h1>
 </div>
 <div class="wrapper-md" ng-controller="FormDemoCtrl">
     <div class="panel panel-default">
