--- a/NubeBooks/Views/Admin/ReportesInventarios.cshtml
+++ b/NubeBooks/Views/Admin/ReportesInventarios.cshtml
@@ -77,7 +77,7 @@
             <div class="form-group">
                 <div class="row">
                     <div class="col-md-6">
-                        <label class="col-md-4 text-center">Movimientos por Item</label>
+                        <label class="col-md-4 text-center">Movimientos de todos los Items</label>
                         @Html.DropDownList("IdItem", new SelectList(ViewBag.lstItems, "IdItem", "Nombre", 0), new { @class = "col-md-4 no-padder miselect2" })
                         <div class="col-md-4 text-center">
                             <a class="btn btn-sm btn-info reporte" data-idreporte="1">Generar Reporte</a>
