--- a/NubeBooks/Views/Admin/ReportesGestion.cshtml
+++ b/NubeBooks/Views/Admin/ReportesGestion.cshtml
@@ -93,7 +93,7 @@
             <div class="form-group">
                 <div class="row">
                     <div class="col-md-4">
-                        <label class="col-md-6 text-center">Ingresos y Egresos por Áreas </label>
+                        <label class="col-md-6 text-center">Ventas y Gastos por Áreas </label>
                         <div class="col-md-6 text-center">
                             <a class="btn btn-sm btn-info reporte" data-idreporte="3">Generar Reporte</a>
                         </div>
