--- a/NubeBooks/Views/Admin/ReportesGestion.cshtml
+++ b/NubeBooks/Views/Admin/ReportesGestion.cshtml
@@ -143,13 +143,13 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <label class="col-md-6 text-center">Cuentas Cobradas y por Cobrar</label>
+                        <label class="col-md-6 text-center">Documentos Cobrados y por Cobrar</label>
                         <div class="col-md-6 text-center">
                             <a class="btn btn-sm btn-info reporte" data-idreporte="7">Generar Reporte</a>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <label class="col-md-6 text-center">Cuentas Pagadas y por Pagar</label>
+                        <label class="col-md-6 text-center">Documentos Pagados y por Pagar</label>
                         <div class="col-md-6 text-center">
                             <a class="btn btn-sm btn-info reporte" data-idreporte="8">Generar Reporte</a>
                         </div>
