Cambios de un nuevo action result

--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -417,6 +417,16 @@
                                 </li>
                             }
                             <li class="line dk hidden-folded"></li>
+                            <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">
+                                <span>Archivos</span>
+                            </li>
+                            <li>
+                            <li>
+                                <a href="@Url.Action("Proforma", "Admin")">
+                                    <i class="fa fa-file"></i>
+                                    <span>Proformas</span>
+                                </a>
+                            </li>
                         </ul>
                     </nav>
                     <!-- nav -->
